--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -46,6 +46,5 @@
 
   .profile-svg {
     grid-column: 2;
-    min-width: 0px;
   }
 }
